fix quickstart byline alignment

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ body > footer .align-right img {
 }
 
 .quickstart h4 {
-  margin: 42px 0 0;
+  margin: 48px 0 0;
   font-size: 30px;
   text-shadow: 0 1px 3px rgba(0,0,0,.8);
 }
